Source/WebKit2/DerivedSources.make
@@ -69,6 +69,7 @@ VPATH = \
 
 MESSAGE_RECEIVERS = \
     AuthenticationManager \
+    ChildProcess \
     CustomProtocolManager \
     CustomProtocolManagerProxy \
     DatabaseProcess \
